--- a/arch/powerpc/configs/85xx/tqmt2081_64_defconfig
+++ b/arch/powerpc/configs/85xx/tqmt2081_64_defconfig
@@ -125,6 +125,7 @@ CONFIG_CICADA_PHY=y
 CONFIG_VITESSE_PHY=y
 CONFIG_TERANETICS_PHY=y
 CONFIG_BROADCOM_PHY=y
+CONFIG_DP83867_PHY=y
 CONFIG_FIXED_PHY=y
 CONFIG_MDIO_BUS_MUX_GPIO=y
 CONFIG_MDIO_BUS_MUX_MMIOREG=y
@@ -150,8 +151,13 @@ CONFIG_SPI=y
 CONFIG_SPI_GPIO=y
 CONFIG_SPI_FSL_SPI=y
 CONFIG_SPI_FSL_ESPI=y
+CONFIG_GPIO_SYSFS=y
+CONFIG_GPIO_PCA953X=y
+CONFIG_GPIO_PCA953X_IRQ=y
+CONFIG_SENSORS_JC42=y
 CONFIG_SENSORS_LM90=y
 CONFIG_SENSORS_INA2XX=y
+CONFIG_MFD_STMPE=y
 CONFIG_FB=y
 CONFIG_FB_FSL_DIU=y
 # CONFIG_VGA_CONSOLE is not set
@@ -200,6 +206,7 @@ CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_DS1307=y
 CONFIG_RTC_DRV_DS1374=y
 CONFIG_RTC_DRV_DS3232=y
+CONFIG_RTC_DRV_PCF85063=y
 CONFIG_RTC_DRV_CMOS=y
 CONFIG_DMADEVICES=y
 CONFIG_FSL_DMA=y
@@ -207,7 +214,7 @@ CONFIG_UIO=y
 CONFIG_VIRT_DRIVERS=y
 CONFIG_FSL_HV_MANAGER=y
 CONFIG_CLK_QORIQ=y
-CONFIG_FSL_PAMU=y
+# CONFIG_IOMMU_SUPPORT is not set
 CONFIG_FSL_DPA=y
 CONFIG_FSL_DPA_CHECKING=y
 CONFIG_FSL_BMAN=y
@@ -222,7 +229,7 @@ CONFIG_ISO9660_FS=m
 CONFIG_JOLIET=y
 CONFIG_ZISOFS=y
 CONFIG_UDF_FS=m
-CONFIG_MSDOS_FS=m
+CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_NTFS_FS=y
 CONFIG_TMPFS=y
